--- a/14.0/config/odoo.conf
+++ b/14.0/config/odoo.conf
@@ -17,9 +17,9 @@ data_dir = /var/lib/odoo
 ; list_db = True
 ; log_db = False
 ; log_handler = [':INFO']
-; log_level = info
-; logfile = None
-; longpolling_port = 8072
+log_level = info
+logfile = /var/log/odoo/odoo-server.log
+longpolling_port = 8072
 ; max_cron_threads = 2
 ; osv_memory_age_limit = 1.0
 ; osv_memory_count_limit = False
@@ -31,7 +31,7 @@ data_dir = /var/lib/odoo
 ; workers = 0
 ; xmlrpc = True
 ; xmlrpc_interface = 
-; xmlrpc_port = 8069
+xmlrpc_port = 8069
 ; xmlrpcs = True
 ; xmlrpcs_interface = 
-; xmlrpcs_port = 8071
+xmlrpcs_port = 8071
