--- a/14.0/docker-compose.yml
+++ b/14.0/docker-compose.yml
@@ -1,32 +1,34 @@
-version: "3.8"
-
+version: '3.1'
 services:
   web:
     image: odoo:14.0
-    restart: always
     depends_on:
       - db
     ports:
       - "8069:8069"
     volumes:
-      - type: volume
-        source: odoo-web-data
-        target: /var/lib/odoo
-      #- type: bind
-        #source: ./config
-        #target: /etc/odoo
-      - type: bind
-        source: ./addons
-        target: /mnt/extra-addons
+      - odoo-web-data:/var/lib/odoo
+      - ./config:/etc/odoo
+      - ./addons:/mnt/extra-addons
+    environment:
+      - PASSWORD_FILE=/run/secrets/postgresql_password
+    secrets:
+      - postgresql_password
   db:
-    image: postgres:10
+    image: postgres:13
     environment:
       - POSTGRES_DB=postgres
-      - POSTGRES_PASSWORD=odoo
+      - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
       - POSTGRES_USER=odoo
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - odoo-db-data:/var/lib/postgresql/data/pgdata
+    secrets:
+      - postgresql_password
 volumes:
   odoo-web-data:
   odoo-db-data:
+
+secrets:
+  postgresql_password:
+    file: odoo_pg_pass
